--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,16 +26,43 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const date = new Date();
+    const isAdult = people.some(p => (date.getFullYear()-p.year>=19));
+    // console.log(isAdult);
+    // console.log({isAdult});
+
     // Array.prototype.every() // is everyone 19 or older?
+    const allAdults = people.every(p => (date.getFullYear()-p.year>=19));
+    console.log(allAdults);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    // const comment = comments.find(comm => {
+    //   if (comm.id=='823423')
+    //   {
+    //     return comm;
+    //   }
+    // })
+    const comment = comments.find(com => com.id==823423);
+    console.log(comment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const commentIdx = comments.findIndex(com => com.id==823423);
+    console.log(commentIdx);
 
+    // // deleted 3 elements starting from index commentIdx
+    // // changes array in place
+    // comments.splice(commentIdx, 3);
+    // console.log(comments);
+
+    // creates a new array
+    const newComments = [...comments.slice(0,commentIdx),
+                        ...comments.slice(commentIdx+1)];
+    console.log(comments);
+    console.log(newComments);
   </script>
 </body>
 </html>
