--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -26,6 +26,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -43,6 +44,9 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
     }
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -56,6 +60,28 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      /* border: 1px solid red; */
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      /* flex-grow:1; */
+    }
+
+    .panel > *:first-child {
+        transform: translateY(-100%);
+    }
+
+    .panel.open-active > *:first-child {
+        transform: translateY(0);
+    }
+
+    .panel > *:last-child {
+        transform: translateY(100%);
+    }
+
+    .panel.open-active > *:last-child {
+        transform: translateY(0);
     }
 
     .panel p {
@@ -70,6 +96,7 @@
     }
 
     .panel.open {
+      flex: 5;
       font-size: 40px;
     }
 
@@ -105,7 +132,25 @@
   </div>
 
   <script>
+    function toggleElem() {
+      this.classList.toggle('open');
+    }
 
+    // e will the transitionend event.
+    // This function will be called for different transitionend event
+    function toggleText(e) {
+      // console.log(e.propertyName);
+      
+      // if the transitionend event name includes string 'flex', then add 'open-active' class
+      if (e.propertyName.includes('flex')) {
+        // console.log('here', this);
+        this.classList.toggle('open-active');
+      }
+    }
+
+    const panels = document.querySelectorAll('.panel');
+    panels.forEach(panel => panel.addEventListener('click', toggleElem));
+    panels.forEach(panel => panel.addEventListener('transitionend',toggleText));
   </script>
 
 
