--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -7,6 +7,63 @@
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
 <script>
+  const canvas = document.querySelector('#draw');
+  const ctx = canvas.getContext('2d');
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+
+  ctx.strokeStyle = '#BADA55';
+  ctx.lineJoin = 'round';
+  ctx.lineCap = 'round';
+  ctx.lineWidth = 0;
+  
+  let isDrawing = false;
+  let lastX = 0;
+  let lastY = 0;
+  let hue = 0;
+  let direction = true;
+
+  function draw(e) {
+    // console.log(e);
+    // return if not drawing (not clicked)
+    if (!isDrawing) {
+      return;
+    }
+
+    ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+    ctx.beginPath();
+    ctx.moveTo(lastX, lastY);
+    ctx.lineTo(e.offsetX, e.offsetY);
+    ctx.stroke();
+    // lastX = e.offsetX;
+    // lastY = e.offsetY;
+
+    // last two can be achieved using a single line
+    [lastX, lastY] = [e.offsetX,e.offsetY];
+    hue = hue + 1;
+    if (hue>=360) {
+      hue = 0;
+    }
+
+    if (ctx.lineWidth>50 || ctx.lineWidth<=1) {
+      direction = !direction;
+    }
+    console.log(ctx.lineWidth);
+    if (direction) {
+      ctx.lineWidth = ctx.lineWidth + 1;
+    }
+    else {
+      ctx.lineWidth = ctx.lineWidth - 1;
+    }
+  }
+
+  canvas.addEventListener('mousemove',draw);
+  canvas.addEventListener('mousedown', (e) => {
+    [lastX, lastY] = [e.offsetX, e.offsetY];
+    isDrawing=true
+  });
+  canvas.addEventListener('mouseup', () => isDrawing = false);
+  canvas.addEventListener('mouseout', () => isDrawing = false);
 </script>
 
 <style>
