--- a/21 - Geolocation/index-START.html
+++ b/21 - Geolocation/index-START.html
@@ -59,6 +59,17 @@
     /*Compass: https://thenounproject.com/search/?q=compass&i=592352*/
   </style>
   <script>
+    const arrow = document.querySelector('.arrow');
+    const speed = document.querySelector('.speed-value');
+    navigator.geolocation.watchPosition((data) => {
+      console.log(data.coords);
+      speed.textContent = data.coords.speed;
+      const sd = 20;
+      arrow.style.transform = `rotate(${data.coords.heading}deg)`;
+    }, (err) => {
+      console.log(err);
+      alert('hey! allow to use location.')
+    });
   </script>
 </body>
 </html>
