--- a/26 - Stripe Follow Along Nav/index-START.html
+++ b/26 - Stripe Follow Along Nav/index-START.html
@@ -147,6 +147,7 @@
   }
 
   .trigger-enter-active .dropdown {
+    /* display: block; */
     opacity: 1;
   }
   
@@ -219,7 +220,72 @@
   .button[href*=courses] { background: #ffc600; }
 </style>
 
+
 <script>
+
+  // get all li elements inside ul with 'cool' class
+  const triggers = document.querySelectorAll('.cool > li');
+  const backgroundElem = document.querySelector('.dropdownBackground');
+  const nav = document.querySelector('.top');
+
+  function handleEnter(e) {
+    // console.log(e.type, this);
+    this.classList.add('trigger-enter');
+
+    // after 150ms add class 'trigger-enter-active'
+
+    // // in the below case, this won't be the element,
+    // // but window, using arrow function will not change the 
+    // // value of this
+    // setTimeout(function() {
+    //   console.log(this);
+    //   this.classList.add('trigger-enter-active');
+    // }, 150);
+
+    // right way to call setTimeout so that 'this' doesn't get modified inside it
+    // only add class 'trigger-enter-active' if it already has 'trigger-enter' class
+    // In some cases we might hover on an item then 'trigger-enter' class gets added
+    // but quickly stop hovering on it, in which case the class is removed
+    // but if the act of hovering and stop hovering was within 150 secs,
+    // then the class 'trigger-enter-active' will be added  nevertheless at the end of 150s
+    // hence, we need to check if class 'trigger-enter' is there before adding 
+    // class 'trigger-enter-active'
+    setTimeout(() => this.classList.contains('trigger-active') && this.classList.add('trigger-enter-active'), 150);
+    
+    backgroundElem.classList.add('open');
+    const dropdown = this.querySelector('.dropdown');
+    const dropdownCoords = dropdown.getBoundingClientRect();
+    const navCoords = nav.getBoundingClientRect();
+    console.log(dropdown, dropdownCoords,navCoords);
+
+
+    const coords = {
+      height: dropdownCoords.height,
+      width: dropdownCoords.width,
+      top: dropdownCoords.top-navCoords.top,
+      left: dropdownCoords.left-navCoords.left
+    };
+
+    backgroundElem.style.setProperty('width', coords.width+'px');
+
+    // propert can be set also as below:-
+    backgroundElem.style.height = coords.height+'px';
+    backgroundElem.style.setProperty('transform', `translate(${coords.left}px, ${coords.top}px)`);
+
+    console.log(coords['width'],coords.height);
+
+  }
+
+
+  function handleExit(e) {
+    // console.log(e.type);
+    this.classList.remove('trigger-enter', 'trigger-enter-active');
+    backgroundElem.classList.remove('open');
+  }
+
+  triggers.forEach(trigger => trigger.addEventListener('mouseenter', handleEnter));
+  triggers.forEach(trigger => trigger.addEventListener('mouseleave', handleExit));
+
 </script>
 
 </body>
